--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@gsap/react": "^2.1.1",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.471.0",
     "motion": "^11.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-on-screen": "^2.1.1",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.7.1"
+    "styled-components": "^6.1.14",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
